--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,14 @@
             "cwd": "${workspaceFolder}"
         },
         {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug Server Mac",
+            "program": "${workspaceFolder}/zig-out/bin/zig-memstore",
+            "args": ["9876"],
+            "cwd": "${workspaceFolder}"
+        },
+        {
             "type": "cppvsdbg",
             "request": "launch",
             "name": "Debug Client Windows",
