Added debug test task and launch configs

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,17 @@
             "type": "shell",
             "command": "zig build",
             "group": "build",
+        },
+        {
+            "label": "build zig test",
+            "type": "shell",
+            "command": "zig",
+            "args": [
+                "test",
+                "-femit-bin=zig-out/bin/${fileBasenameNoExtension}-test",
+                "--test-no-exec",
+                "${relativeFile}",
+            ]
         }
     ]
 }
