--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,6 +27,15 @@
             "program": "${workspaceFolder}/zig-out/bin/zig-memstore-client.exe",
             "args": ["9876"],
             "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug test",
+            "program": "${workspaceFolder}/zig-out/bin/${fileBasenameNoExtension}-test",
+            "args": [],
+            "cwd": "${workspaceFolder}",
+            "preLaunchTask": "build zig test"
         }
     ]
 }
