--- a/compose.yml
+++ b/compose.yml
@@ -1,15 +1,17 @@
 services:
 
-  shell: &shell
-    build: .
-    entrypoint: "sh"
+  shell:
+    build:
+      context: .
+      target: build
+    entrypoint: "zsh"
 
   client:
-    <<: *shell
+    build: .
     entrypoint: "/bin/zig-memstore-client 10.5.0.1:9876"
 
   server:
-    <<: *shell
+    build: .
     entrypoint: "/bin/zig-memstore 9876"
     ports:
       - "9876:9876"
